# dream_gen

./: .gitignore  AESTHETIC_SPEC.md  BACKEND_ARCHITECTURE.md  DREAM_WINDOW_MASTER.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  RAINMETER_WIDGET.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  WEEKEND_SPRINT.md  daemon.py  daemon_control.py  kill_comfyui.py  pyproject.toml  todo.md
backend/: __init__.py  analyze_performance_correlations.py  analyze_within_divisor.py  config.yaml  generate_comparison.py  main.py  profile_interpolation.py  test_interpolation_speed.py  test_quality_comparison.py
backend/cache/: __init__.py  aesthetic_matcher.py  collapse_detector.py  dual_similarity.py  injection_strategy.py  manager.py
backend/core/: __init__.py  async_orchestrator.py  comfyui_api.py  display_selector.py  dream_controller.py  frame_buffer.py  generation_coordinator.py  generator.py  shared_resources.py  workflow_builder.py
backend/core/workers/: __init__.py  cache_worker.py  interpolation_worker.py  keyframe_worker.py
backend/interpolation/: __init__.py  frame_sequence_manager.py  hybrid_generator.py  latent_encoder.py  spherical_lerp.py
backend/tools/: README.md  __init__.py  analyze_cache_log.py  analyze_performance_correlations.py  analyze_profiling_logs.py  analyze_within_divisor.py  clean_run_artifacts.py  generate_animation.py  generate_comparison.py  profile_interpolation.py  similarity_comparison.py  test_interpolation_speed.py  test_quality_comparison.py
backend/utils/: __init__.py  color_encoder.py  file_ops.py  game_detector.py  phash_encoder.py  prompt_manager.py  status_writer.py
comfyui_workflows/: flux_img2img.json  flux_txt2img.json  unclip_example.json  workflow_img2img.json  workflow_txt2img.json
docs/: AESTHETIC_SPEC.md  ASYNC_CACHE_MONITORING_DESIGN.md  ASYNC_GENERATION_TODO.md  CONTINUATION_GUIDE.md  DREAM_WINDOW_MASTER.md  INTEGRATION_TEST_TRACKER.md  INTERPOLATION_IMPLEMENTATION.md  PARALLELIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  perf_check.md
docs/backend_architecture/: 00_OVERVIEW.md  CACHE_SYSTEM.md  CORE_MODULES.md  UTILITIES.md
docs/claude_workspace/: CLAUDE_PROGRESS.md  SESSION_2_COMPLETE.md  SESSION_SUMMARY.md  WINDOWS_CHECKLIST.md
docs/rainmeter_widget/: 00_OVERVIEW.md  CUSTOMIZATION.md  SETUP.md
docs/setup/: 01_ENVIRONMENT_SETUP.md  02_COMFYUI_INSTALL.md  03_FLUX_MODEL.md  04_FIRST_TEST.md  05_PYTHON_ENVIRONMENT.md  06_PROJECT_STRUCTURE.md
docs/weekend_sprint/: 00_OVERVIEW.md  SAT_01_API_CLIENT.md  SAT_02_WORKFLOW_BUILDER.md  SAT_03_GENERATOR.md  SAT_04_MAIN_LOOP.md  SUN_01_CACHE_SYSTEM.md  SUN_02_AESTHETIC_MATCHING.md  SUN_03_RAINMETER_WIDGET.md  SUN_04_FINAL_POLISH.md
rainmeter_skin/: DreamWindow.ini  README.md  install.ps1
rainmeter_skin/@Resources/: Variables.inc
rainmeter_skin/@Resources/Scripts/: launch_daemon.ps1
